# zp-prd-a-probe-pic-headfull

./: .clangd  .gitignore  AGENTS.md  README.md  main.c  zp-prd-a-probe-pic-headfull.code-workspace
.cache/clangd/index/: FreeRTOS.h.D4304D97913838BC.idx  FreeRTOSConfig.h.2F95D4E0B622AE00.idx  clock.c.E97F211FA94440F3.idx  clock.h.D3DB7A35B6CC799B.idx  config_bits.c.5F5496016E5E4B67.idx  deprecated_definitions.h.FDA80C5F683F9BCB.idx  dmt.c.7D3F0817DA5E5EFB.idx  (+71 more)
.github/workflows/: static.yml
ESP/a-esp-middleman/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.esp-wrover-kit
ESP/a-esp-middleman/src/: CMakeLists.txt  bridge.c  bridge.h  bt_spp.c  bt_spp.h  frame_filter.c  frame_filter.h  main.c  sound.c  sound.h
client/: index.html  zp-logdatapanel.html
config.mcc/: emeter.c.tempnotimpl  emeter.h.tempnotimpl  fpga.c.tempnotimpl  fpga.h.tempnotimpl  main.c  utils.h
config.mcc/mcc/: config.mc3  config.mc3.bak0  config.mc3.bak1  config.mc3.bak2  config.mc3.bak3  mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml  mcc.vscode
drivers/: emeter.c  emeter.h  emeter_service.c  emeter_service.h  esp_uart.c  esp_uart.h  fpga.c  fpga.h  fpga_bitstream.h  fpga_service.c  fpga_service.h  rcd_service.c  rcd_service.h  rgbw.c  rgbw.h  sensor_service.c  sensor_service.h  servo_service.c  servo_service.h  spi_bus.c  spi_bus.h  wproto.c  wproto.h
protocol/: wprotocol.c  wprotocol.h
rtos/: FreeRTOSConfig.h  rtos_hooks.c
rtos/port/: port.c  portasm_dsPIC33C.S
scripts/: build.sh  buildflash.sh  flash.sh
tools/: fpga_bitstream_pack.py
(+47 files in other folders)
